improve: finaliza doc swagger rota /post
